--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -93,22 +93,25 @@
 	<ul class="buttonwall">
 		{# Artists #}
 		<li>
+			<a target="_blank" href="https://www.patreon.com/cheyennebarton" class="buttonwall__item" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
+		</li>
+		<li>
 			<a target="_blank" href="https://www.furrylittlepeach.com" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
 		</li>
 		<li>
-			<a target="_blank" href="https://cheyennebarton.com" class="buttonwall__item" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
-		</li>
-		<li>
-			<a target="_blank" href="https://girlscape.co.uk" class="buttonwall__item" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
+			<a target="_blank" href="https://www.patreon.com/girlscape" class="buttonwall__item" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://leighellexson.com" class="buttonwall__item" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://uncomfyco.com" class="buttonwall__item" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
+			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
+			<a target="_blank" href="https://www.patreon.com/palomathepeach" class="buttonwall__item" style="font-size: 16px; background-color: #feebb3; color: #212117;">paloma the peach</a>
+		</li>
+		<li>
+			<a target="_blank" href="https://uncomfyco.com" class="buttonwall__item" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
 		</li>
 	</ul>
 	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
