--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -1,20 +1,20 @@
 <section>
 	<h2>Friends</h2>
 	<ul class="buttonwall">
-		<li>
-			<a target="_blank" href="https://gothhoblin.me" class="buttonwall__item" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://gothhoblin.me" style="font-size: 12px; background-color: #083820; color: #fff;">goth hoblin</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://www.thenotsomiserable.co.uk" class="buttonwall__item" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.thenotsomiserable.co.uk" style="font-size: 12px; background-color: #5f0979; color: #fff;">the not so miserable</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://teafuellednonsense.wordpress.com" class="buttonwall__item" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://teafuellednonsense.wordpress.com" class="" style="font-size: 12px; background-color: #fff; color: #00aadc;">Justin Blogs Again!</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://justnik.me/" class="buttonwall__item" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://justnik.me/" style="font-size: 12px; background-color: #2d3748; color: #fff;">justnik</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://www.owain.codes/" class="buttonwall__item" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.owain.codes/" style="font-size: 12px; background-color: #222831; color: #b6ff00;">owain.codes</a>
 		</li>
 	</ul>
 
@@ -70,14 +70,14 @@
 				<img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
 			</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://sleepydev.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://sleepydev.neocities.org" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://10kph.neocities.org" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
 		</li>
 	</ul>
 
@@ -88,30 +88,36 @@
 				<img src="/images/buttons/wiby.gif" alt="PunkWasp">
 			</a>
 		</li>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.patreon.com/girlscape" style="font-size: 14px; background-color: #383838; color: #ff7a18;">CSS tricks</a>
+		</li>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #1e1f26; color: #47cf73;">CodePen</a>
+		</li>
 	</ul>
 	<h2>Creatives</h2>
 	<ul class="buttonwall">
 		{# Artists #}
-		<li>
-			<a target="_blank" href="https://www.patreon.com/cheyennebarton" class="buttonwall__item" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.patreon.com/cheyennebarton" style="font-size: 14px; background-color: #ffc929; color: #fa4723;">cheyenne barton</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://www.furrylittlepeach.com" class="buttonwall__item" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.furrylittlepeach.com" style="font-size: 12px; background-color: #f0490a; color: #fff;">furry little peach </a>
 		</li>
-		<li>
-			<a target="_blank" href="https://www.patreon.com/girlscape" class="buttonwall__item" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #ff91bb; color: #fff;">girlscape</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://leighellexson.com" class="buttonwall__item" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://leighellexson.com" style="font-size: 12px; background-color: #9bc18a; color: #fdfbf7;">Leigh Ellexson</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://www.pansy-shop.com" class="buttonwall__item" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.pansy-shop.com" style="font-size: 16px; background-color: #ffe3e2; color: #220967;">pansy</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://www.patreon.com/palomathepeach" class="buttonwall__item" style="font-size: 16px; background-color: #feebb3; color: #212117;">paloma the peach</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://www.patreon.com/palomathepeach" style="font-size: 12px; background-color: #feebb3; color: #212117;">paloma the peach</a>
 		</li>
-		<li>
-			<a target="_blank" href="https://uncomfyco.com" class="buttonwall__item" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://uncomfyco.com" style="font-size: 13px; background-color: #603814; color: #fff;">uncomfyco</a>
 		</li>
 	</ul>
 	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
