--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -89,10 +89,10 @@
 			</a>
 		</li>
 		<li class="buttonwall__item">
-			<a target="_blank" href="https://www.patreon.com/girlscape" style="font-size: 14px; background-color: #383838; color: #ff7a18;">CSS tricks</a>
+			<a target="_blank" href="https://css-tricks.com/" style="font-size: 14px; background-color: #383838; color: #ff7a18;">CSS tricks</a>
 		</li>
 		<li class="buttonwall__item">
-			<a target="_blank" href="https://www.patreon.com/girlscape" style="font-size: 13px; background-color: #1e1f26; color: #47cf73;">CodePen</a>
+			<a target="_blank" href="https://codepen.io/" style="font-size: 13px; background-color: #1e1f26; color: #47cf73;">CodePen</a>
 		</li>
 	</ul>
 	<h2>Creatives</h2>
