--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -21,57 +21,70 @@
 	<h2>Neighbours</h2>
 		<ul class="buttonwall">
 		<li class="buttonwall__image">
-			<a href="https://hillhouse.neocities.org/">
+			<a href="https://grlrot.neocities.org/" target="_blank">
+				<img src="/images/buttons/grlrot.gif" alt="grlrot">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://hillhouse.neocities.org/" target="_blank">
 				<img src="/images/buttons/hillhouse.png" alt="Hillhouse">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://jasm1nii.xyz/">
+			<a href="https://jasm1nii.xyz/" target="_blank">
 				<img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://lostletters.neocities.org/">
+			<a href="https://lostletters.neocities.org/" target="_blank">
 				<img src="/images/buttons/lostletters.gif" alt="Lost Letters">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://sunosin.neocities.org/">
+			<a href="https://sunosin.neocities.org/" target="_blank">
 				<img src="/images/buttons/lipu_pi_jan_sunosin.png" alt="lipu pi jan sunosin">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://maria.town/">
+			<a href="https://maria.town/" target="_blank">
 				<img src="/images/buttons/marzka_cafe.png" alt="Maria">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://maya.land/">
+			<a href="https://maya.land/" target="_blank">
 				<img src="/images/buttons/maya_land.png" alt="Maya Land">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://melonking.net/">
+			<a href="https://melonking.net/" target="_blank">
 				<img src="/images/buttons/melonking.gif" alt="Melon King">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://pinkvampyr.neocities.org/">
+			<a href="https://moonpr1sm.neocities.org" target="_blank">
+				<img src="/images/buttons/moonpr1sm.png" alt="Moon Prism">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://pinkvampyr.neocities.org/" target="_blank">
 				<img src="/images/buttons/pinkvampyr.gif" alt="PinkVampyr">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://punkwasp.neocities.org/">
+			<a href="https://punkwasp.neocities.org/" target="_blank">
 				<img src="/images/buttons/punkwasp.png" alt="PunkWasp">
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://sneekrealm.neocities.org/">
+			<a href="https://sneekrealm.neocities.org/" target="_blank">
 				<img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
 			</a>
 		</li>
 		<li class="buttonwall__item">
 			<a target="_blank" href="https://jessicajournals.com" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
+		</li>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://nohappynonsense.net/" style="font-size: 10px; background-color: #fcfce3; color: black;">no happy nonsense</a>
 		</li>
 		<li class="buttonwall__item">
 			<a target="_blank" href="https://sleepydev.neocities.org" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepy dev</a>
@@ -84,8 +97,8 @@
 	<h2>Tools & fun things</h2>
 	<ul class="buttonwall">
 		<li class="buttonwall__image">
-			<a href="https://wiby.me/">
-				<img src="/images/buttons/wiby.gif" alt="PunkWasp">
+			<a href="https://wiby.me/" target="_blank">
+				<img src="/images/buttons/wiby.gif" alt="Wiby">
 			</a>
 		</li>
 		<li class="buttonwall__item">
