--- a/content/site.njk
+++ b/content/site.njk
@@ -26,6 +26,7 @@ title: About the site
 			<li><a href="https://doodad.dev/dither-me-this/" target="_blank">Image dithering tool</a> by doodad</li>
 			<li>Logo font is <a href="https://github.com/satsuyako/CherryBomb" target="_blank">Cherry Bomb</a></li>
 			<li>Body font is <a href="https://brailleinstitute.org/freefont" target="_blank">Atkinson Hyperlegible</a></li>
+			<li>Web analytics by <a href="https://www.goatcounter.com/" target="_blank">Goat Counter</a></li>
 		</ul>
 		<h2>To do</h2>
 
