--- a/assets/css/_global.css
+++ b/assets/css/_global.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  font-family: 'AtkinsonHyperlegible', 'Tahoma', sans-serif;
+  font-family: var(--font-family);
   color: var(--text);
   padding: 0;
   margin: 0;
