--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -1,4 +1,4 @@
-<section>
+<section class="reading-width">
 	<h2>Friends</h2>
 	<ul class="buttonwall">
 		<li class="buttonwall__item">
@@ -66,6 +66,11 @@
 			</a>
 		</li>
 		<li class="buttonwall__image">
+			<a href="https://neonaut.neocities.org/" target="_blank">
+				<img src="/images/buttons/neonaut.png" alt="Neonaut">
+			</a>
+		</li>
+		<li class="buttonwall__image">
 			<a href="https://pinkvampyr.neocities.org/" target="_blank">
 				<img src="/images/buttons/pinkvampyr.gif" alt="PinkVampyr">
 			</a>
@@ -101,11 +106,19 @@
 				<img src="/images/buttons/wiby.gif" alt="Wiby">
 			</a>
 		</li>
+		<li class="buttonwall__image">
+			<a href="http://web.archive.org/" target="_blank">
+				<img src="/images/buttons/wayback_machine.png" alt="Internet Archive: Wayback Machine">
+			</a>
+		</li>
 		<li class="buttonwall__item">
 			<a target="_blank" href="https://css-tricks.com/" style="font-size: 14px; background-color: #383838; color: #ff7a18;">CSS tricks</a>
 		</li>
 		<li class="buttonwall__item">
 			<a target="_blank" href="https://codepen.io/" style="font-size: 13px; background-color: #1e1f26; color: #47cf73;">CodePen</a>
+		</li>
+		<li class="buttonwall__item">
+			<a target="_blank" href="https://goblin.tools/" style="font-size: 14px; background-color: black; color: limegreen;">goblin tools</a>
 		</li>
 	</ul>
 	<h2>Creatives</h2>
