--- a/assets/css/_utility.css
+++ b/assets/css/_utility.css
@@ -54,6 +54,14 @@
   max-width: 36rem;
 }
 
+.headings-small h1,
+.headings-small h2,
+.headings-small h3,
+.headings-small h4,
+.headings-small h5 {
+  font-size: 1rem;
+}
+
 .full-width {
   width: 100%;
 }
