--- a/structure/pages/item-blog.njk
+++ b/structure/pages/item-blog.njk
@@ -1,9 +1,10 @@
-{% extends "structure/templates/page.njk" %}
+{% extends "structure/templates/page-3col.njk" %}
 
 {%- block main -%}
     {% import "structure/components/components.njk" as macro with context %}
+
     <article class="full-width">
-        <div class="reading-width">
+        <div class="reading-width{% if tags.includes("weeknotes") %} headings-small{% endif %}">
             {{ content | safe }}
         </div>
     </article>
@@ -23,18 +24,7 @@
         </li>
         {% endif %}
     </ul>
-
-    {% if tags.includes("weeknotes") %}
-        <button id="toggleDetail" class="button mb-1" aria-pressed="false">Expand accordions</button>
-    {% endif %}
 {%- endblock -%}
 
 {% block scripts %}
-    {% if tags.includes("weeknotes") %}
-    <script>
-        const t = document.getElementById('toggleDetail')
-        const o = "Expand accordions"
-        const c = "Collapse accordions"
-        if(t){t.addEventListener("click",function(){document.body.querySelectorAll("details").forEach(e=>{e.hasAttribute("open")?(t.innerHTML=o,t.setAttribute("aria-pressed",!1),e.removeAttribute("open")):(t.innerHTML=c,t.setAttribute("aria-pressed",!0),e.setAttribute("open",!0))})});}</script>
-    {% endif %}
 {% endblock %}
