--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -19,7 +19,17 @@
 	</ul>
 
 	<h2>Neighbours</h2>
-		<ul class="buttonwall">
+	<ul class="buttonwall">
+		<li class="buttonwall__image">
+			<a href="https://debtdeath.neocities.org/" target="_blank">
+				<img src="/images/buttons/debtdeath.png" alt="debtdeath">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://fizzsea.neocities.org/" target="_blank">
+				<img src="/images/buttons/fizzsea.gif" alt="Fizzsea">
+			</a>
+		</li>
 		<li class="buttonwall__image">
 			<a href="https://grlrot.neocities.org/" target="_blank">
 				<img src="/images/buttons/grlrot.gif" alt="grlrot">
@@ -83,6 +93,11 @@
 		<li class="buttonwall__image">
 			<a href="https://sneekrealm.neocities.org/" target="_blank">
 				<img src="/images/buttons/sneekrealm.png" alt="Sneek Realm">
+			</a>
+		</li>
+		<li class="buttonwall__image">
+			<a href="https://xandra.cc/" target="_blank">
+				<img src="/images/buttons/xandra.png" alt="The Museum of Alexandra">
 			</a>
 		</li>
 		<li class="buttonwall__item">
