--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -1,4 +1,6 @@
 :root {
+  --font-family: 'Atkinson Hyperlegible', 'Tahoma', sans-serif;
+  --font-size: 16px;
   --bodybg: #0b0b0b;
   --bg: Black;
   --accent: Gold;
@@ -8,8 +10,13 @@
   --linkhover: SpringGreen;
   --text: LavenderBlush;
   --pink: DeepPink;
-  --font-size: 16px;
-  --font-family: 'Atkinson Hyperlegible', 'Tahoma', sans-serif;
+  --logo-x: Gold;
+  --logo-anim-1: hsl(255, 70%, 70%);
+  --logo-anim-2: hsl(330, 70%, 70%);
+  --logo-anim-3: hsl(10, 100%, 60%);
+  --logo-anim-4: hsl(51, 100%, 60%);
+  --logo-anim-5: hsl(153, 70%, 70%);
+  --logo-anim-6: hsl(204, 70%, 70%);
 }
 
 @media (min-width: 576px) {
@@ -28,6 +35,12 @@ html[data-scheme='dark'] {
   --linkhover: SpringGreen;
   --text: LavenderBlush;
   --pink: DeepPink;
+  --logo-anim-1: hsl(255, 70%, 70%);
+  --logo-anim-2: hsl(330, 70%, 70%);
+  --logo-anim-3: hsl(10, 100%, 60%);
+  --logo-anim-4: hsl(51, 100%, 60%);
+  --logo-anim-5: hsl(153, 70%, 70%);
+  --logo-anim-6: hsl(204, 70%, 70%);
 }
 
 @media (prefers-color-scheme: light) {
@@ -40,6 +53,13 @@ html[data-scheme='dark'] {
     --linkaccent: LightSteelBlue;
     --linkhover: #e1007a;
     --text: Black;
+    --logo-anim-1: hsl(255, 70%, 70%);
+    --logo-anim-2: hsl(330, 100%, 40%);
+    --logo-anim-3: hsl(10, 100%, 50%);
+    --logo-anim-4: hsl(320, 100%, 50%);
+    --logo-anim-5: hsl(204, 100%, 50%);
+    --logo-anim-6: hsl(153, 100%, 40%);
+
   }
 }
 
@@ -52,4 +72,10 @@ html[data-scheme='light'] {
   --linkaccent: LightSteelBlue;
   --linkhover: #e1007a;
   --text: Black;
+  --logo-anim-1: hsl(255, 70%, 70%);
+  --logo-anim-2: hsl(330, 100%, 40%);
+  --logo-anim-3: hsl(10, 100%, 50%);
+  --logo-anim-4: hsl(320, 100%, 50%);
+  --logo-anim-5: hsl(204, 100%, 50%);
+  --logo-anim-6: hsl(153, 100%, 40%);
 }
