--- a/content/about.njk
+++ b/content/about.njk
@@ -3,7 +3,7 @@ title: About
 description: There is a rustling noise from behind a bush and you go to investigate. Amidst the leaves, a pair of mischievous brown eyes meet yours. Slowly, a woman emerges from the undergrowth, adorned with tangled brown and blonde hair and grubby gardening attire. You get a waft of earth and soap as she extends her hand in greeting.
 eleventyNavigation:
   key: About
-  emoji: 💁🏻‍♀️
+  emoji: <span class="emoji" aria-hidden="true">💁🏻‍♀️</span>
   order: 1
 ---
 {% extends 'structure/templates/page-3col.njk'%}
@@ -19,11 +19,11 @@ eleventyNavigation:
 
 		<h2>Some things about me</h2>
 		<ul>
-			<li><span class="emoji" role="img" aria-label="Dog">🐶</span> I have a dog, she is a champagne (pale yellow) labrador called Orla. She is a nervous babe, but insanely loving and happy when home with her faves, sniffing undergrowth or running through long grass.</li>
-			<li><span class="emoji" role="img" aria-label="House">🏠</span> I am incredibly lucky to be a homeowner, and have my own garden where I grow vegetables and (mostly inherited) roses.</li>
-			<li><span class="emoji" role="img" aria-label="Game controller">🎮</span> I love playing cozy, wholesome games on my Steam Deck, like Stardew Valley, It Takes Two, Garden Galaxy. I quit a decade long addiction to first-person-shooter games like <a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Overwatch</a> (Mercy main) and Valorant (Killjoy main) in December 2022.</li>
-			<li><span class="emoji" role="img" aria-label="Face with hearts">🥰</span> My all-time favourite game is <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>.</li>
-			<li><span class="emoji" role="img" aria-label="Carrot">🥕</span> I'm vegetarian and have been since July 2020 (a long term dream enabled by lockdown).</li>
+			<li>🐶 I have a dog, she is a champagne (pale yellow) labrador called Orla. She is a nervous babe, but insanely loving and happy when home with her faves, sniffing undergrowth or running through long grass.</li>
+			<li>🏠 I am incredibly lucky to be a homeowner, and have my own garden where I grow vegetables and (mostly inherited) roses.</li>
+			<li>🎮 I love playing cozy, wholesome games on my Steam Deck, like Stardew Valley, It Takes Two, Garden Galaxy. I quit a decade long addiction to first-person-shooter games like <a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Overwatch</a> (Mercy main) and Valorant (Killjoy main) in December 2022.</li>
+			<li>🥰 My all-time favourite game is <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>.</li>
+			<li>🥕 I'm vegetarian and have been since July 2020 (a long term dream enabled by lockdown).</li>
 			<li><span class="emoji" role="img" aria-label="Silly face">🤪</span> I love using emojis.</li>
 		</ul>
 	</div>
