--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,9 +1,8 @@
 ---
 title: Blog
-emoji: 📝
 eleventyNavigation:
   key: Blog
-  emoji: 📝
+  emoji: <span class="emoji" aria-hidden="true">📝</span>
   order: 3
 ---
 {% extends "structure/pages/list-blog.njk" %}
