--- a/content/experiments.njk
+++ b/content/experiments.njk
@@ -1,9 +1,9 @@
 ---
 title: Experiments
-emoji: 🧪
+emoji: <span class="emoji" aria-hidden="true">🧪</span>
 eleventyNavigation:
   key: Experiments
-  emoji: 🧪
+  emoji: <span class="emoji" aria-hidden="true">🧪</span>
   order: 5
 ---
 {% extends "structure/pages/list-experiments.njk" %}
