--- a/content/links.njk
+++ b/content/links.njk
@@ -4,7 +4,7 @@ emoji: ' <span class="emoji" role="img" role="presentation">🔗</span>'
 description: 
 eleventyNavigation:
   key: Links
-  emoji: 🔗
+  emoji: <span class="emoji" aria-hidden="true">🔗</span>
   order: 3
 ---
 {% extends 'structure/templates/page-3col.njk'%}
