--- a/content/site.njk
+++ b/content/site.njk
@@ -1,5 +1,6 @@
 ---
 title: About the site
+emoji: <span class="emoji" aria-hidden="true">👩‍💻</span>
 ---
 {% extends 'structure/templates/page-3col.njk'%}
 
