--- a/content/thoughts.njk
+++ b/content/thoughts.njk
@@ -1,7 +1,7 @@
 ---
 eleventyNavigation:
   key: Thoughts
-  emoji: 💭
+  emoji: <span class="emoji" aria-hidden="true">💭</span>
   url: https://frills.thoughts.page/
   order: 2
 permalink: false
