--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -6,7 +6,10 @@
     </a>
     {% include "structure/global/nav.njk" %}
     <div class="settings">
-        <button id="colorSchemeButton" class="toggle toggle--colorscheme">
+        <button id="spookyButton" class="button ghost toggle toggle--spooky">
+            Toggle spooky theme
+        </button>
+        <button id="colorSchemeButton" class="button ghost toggle toggle--colorscheme">
             Toggle dark theme
         </button>
         {# <label>
