--- a/content/accessibility.njk
+++ b/content/accessibility.njk
@@ -1,5 +1,6 @@
 ---
 title: Accessibility
+emoji: <span class="emoji" aria-hidden="true">♿</span>
 ---
 {% extends 'structure/templates/page-3col.njk'%}
 
