--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -1,10 +1,10 @@
-<footer class="page__footer grid">
+<footer class="page__footer grid grid--main">
     <div></div>
     <nav aria-label="Footer" class="page__nav">
         <ul>
-            <li>♿ <a href="/accessibility">Accessibility</a>
-            <li>👩‍💻 <a href="/site">About the site</a>
-            <li>⬆️ <a href="#top">Back to top</a></li>
+            <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
+            <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/site">About the site</a>
+            <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
         </ul>
     </nav>
 </footer>
