🐛 Fix njk logic in nav

--- a/structure/global/nav.njk
+++ b/structure/global/nav.njk
@@ -1,5 +1,6 @@
 <nav aria-label="Top level" class="page__nav">
     <ul>
+        {%- for entry in collections.all | eleventyNavigation %}
         <li>{{ entry.emoji|safe }} <a href="{{ entry.url }}" {% if entry.url == page.url %} aria-current="page" {% endif %}>{{ entry.title }}</a></li>
         {%- endfor %}
     </ul>
