💄 Update header classes

--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -1,5 +1,5 @@
-<header class="page__header grid">
-    <a href="/" class="page__title">
+<header class="page__header grid grid--header">
+    <a href="/" class="page__logo">
         <span class="visually-hidden">Frills</span>
         {% include "structure/components/logo.njk" %}
     </a>
