--- a/content/accessibility.njk
+++ b/content/accessibility.njk
@@ -22,9 +22,9 @@ emoji: <span class="emoji" aria-hidden="true">♿</span>
 
 		<h2>Website to do</h2>
 		<ul>
-			<li>Add toggle for light/dark mode (browser preference override)</li>
+			<li>✅ Add toggle for light/dark mode (browser preference override)</li>
 			<li>Add toggle for reducing animations (system preference override)</li>
-			<li>Test with screen reader</li>
+			<li>✅ Test with screen reader</li>
 		</ul>
 
 	</div>
