--- a/content/rss/rss.njk
+++ b/content/rss/rss.njk
@@ -1,6 +1,6 @@
 ---json
 {
-  "permalink": "feed.xml",
+  "permalink": "rss.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
     "title": "Frills' internet emporium",
