--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -4,9 +4,16 @@ h3,
 h4,
 h5,
 h6 {
-  padding: 1rem 0 0 0;
   margin: 0 0 0.5rem 0;
   line-height: 1.2
+}
+* + h1,
+* + h2,
+* + h3,
+* + h4,
+* + h5,
+* + h6 {
+  padding: 1rem 0 0 0;
 }
 
 h1 {
