--- a/content/about.njk
+++ b/content/about.njk
@@ -19,12 +19,12 @@ eleventyNavigation:
 
 		<h2>Some things about me</h2>
 		<ul>
-			<li>🐶 I have a dog, she is a champagne (pale yellow) labrador called Orla. She is a nervous babe, but insanely loving and happy when home with her faves, sniffing undergrowth or running through long grass.</li>
+			<li>🐶 I have an adorable canine companion, Orla! She's a lovely champagne (pale yellow) working Labrador, she has so many beans. She's the happiest pup when she's with one of her top 10 favorite humans, exploring the great outdoors, or frolicking in tall grass!</li>
 			<li>🏠 I am incredibly lucky to be a homeowner, and have my own garden where I grow vegetables and (mostly inherited) roses.</li>
-			<li>🎮 I love playing cozy, wholesome games on my Steam Deck, like Stardew Valley, It Takes Two, Garden Galaxy. I quit a decade long addiction to first-person-shooter games like <a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Overwatch</a> (Mercy main) and Valorant (Killjoy main) in December 2022.</li>
-			<li>🥰 My all-time favourite game is <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>.</li>
-			<li>🥕 I'm vegetarian and have been since July 2020 (a long term dream enabled by lockdown).</li>
-			<li><span class="emoji" role="img" aria-label="Silly face">🤪</span> I love using emojis.</li>
+			<li>🎮 Ah, gaming! I've found my heart in cozy and heartwarming games on my trusty Steam Deck. Titles like Stardew Valley, It Takes Two, and Garden Galaxy have become my new go-tos. I bid farewell to a decade-long love affair with first-person-shooter games (<a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Mercy main in Overwatch</a> and Killjoy main in Valorant) in December 2022.
+			<li>🥰 My absolute, all-time favorite game? It has to be <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>, a nostalgic game about friendship and growing up, created in a beautiful art style and with a very fun timey-wimey mechanic.</
+			li>
+			<li>🥕 I have been vegetarian since July 2020, a long term dream enabled by the break in social norms during Lockdown.</li>
 		</ul>
 	</div>
 </section>
