--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -10,4 +10,5 @@
     <link href="/css/main.css?nocache=8008135" rel="stylesheet">
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2" crossorigin>
     {% block head %}{% endblock %}
+    <noscript><link href="/css/noscript.css?nocache=8008135" rel="stylesheet"></noscript>
 </head>
