--- a/structure/components/buttonwall.njk
+++ b/structure/components/buttonwall.njk
@@ -46,6 +46,11 @@
 			</a>
 		</li>
 		<li class="buttonwall__image">
+			<a href="https://inkcaps.neocities.org/">
+				<img src="/images/buttons/inkcaps.png" alt="Inkcaps">
+			</a>
+		</li>
+		<li class="buttonwall__image">
 			<a href="https://jasm1nii.xyz/">
 				<img src="/images/buttons/jasmines_journal.png" alt="Jasmine's Journal">
 			</a>
@@ -91,6 +96,11 @@
 			</a>
 		</li>
 		<li class="buttonwall__image">
+			<a href="https://notprincehamlet.neocities.org/">
+				<img src="/images/buttons/notprincehamlet.png" alt="Not Prince Hamlet">
+			</a>
+		</li>
+		<li class="buttonwall__image">
 			<a href="https://pinkvampyr.neocities.org/">
 				<img src="/images/buttons/pinkvampyr.png" alt="PinkVampyr">
 			</a>
@@ -101,7 +111,7 @@
 			</a>
 		</li>
 		<li class="buttonwall__image">
-			<a href="https://punkwasp.neocities.org/">
+			<a href="https://punkwasp.leprd.space/">
 				<img src="/images/buttons/punkwasp.png" alt="PunkWasp">
 			</a>
 		</li>
