--- a/content/index.njk
+++ b/content/index.njk
@@ -9,7 +9,7 @@ title: Home
 	<ul class="unstyled">
 		<li><span class="emoji" role="img" aria-label="Pronouns">🌷</span> she/her</li>
 		<li><span class="emoji" role="img" aria-label="Location">📍</span> Wales, UK</li>
-		<li><span class="emoji" role="img" aria-label="Local time">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (utc+1)</li>
+		<li class="noscriptHide"><span class="emoji" role="img" aria-label="Local time">⏰</span> <span id="localTime" class="lowercase" title="British Summer Time">12:00pm</span> (utc+1)</li>
 		<li><span class="emoji" role="img" aria-label="Sun sign">🌞</span> Gemini</li>
 		<li><span role="img" class="emoji" aria-label="Moon sign">🌚</span> Scorpio</li>
 		<li><span role="img" class="emoji" aria-label="Status">🟢</span> Probably Online</li>
