--- a/content/experiments/html-safe-named-colors.njk
+++ b/content/experiments/html-safe-named-colors.njk
@@ -10,5 +10,212 @@ draft: true
 {% block main %}
 <ul>
   <li><a href="https://stackoverflow.com/a/8561913">https://stackoverflow.com/a/8561913</a></li>
+  <li><a href="https://www.w3schools.com/tags/ref_colornames.asp">https://www.w3schools.com/tags/ref_colornames.asp</a></li>
 </ul>
+
+<ul>
+  <li>
+    <p>AliceBlue</p>
+    <p>#F0F8FF</p>
+    <p>rgb(240, 248, 255)</p>
+  </li>
+  <li>
+    <p>AntiqueWhite</p>
+    <p>#FAEBD7</p>
+    <p>rgb(250, 235, 215)</p>
+  </li>
+  <li>
+    <p>Aqua</p>
+    <p>#00FFFF</p>
+    <p>rgb(0, 255, 255)</p>
+  </li>
+  <li>
+    <p>Aquamarine</p>
+    <p>#7FFFD4</p>
+    <p>rgb(127, 255, 212)</p>
+  </li>
+  <li>
+    <p>Azure</p>
+    <p>#F0FFFF</p>
+    <p>rgb(240, 255, 255)</p>
+  </li>
+  <li>
+    <p>Beige</p>
+    <p>#F5F5DC</p>
+    <p>rgb(245, 245, 220)</p>
+  </li>
+  <li>
+    <p>Bisque</p>
+    <p>#FFE4C4</p>
+    <p>rgb(245, 245, 220)</p>
+  </li>
+  <li>
+    <p>Black</p>
+    <p>#000000</p>
+    <p>rgb(0, 0, 0)</p>
+  </li>
+  <li>
+    <p>BlanchedAlmond</p>
+    <p>#FFEBCD</p>
+    <p>rgb(255, 235, 205)</p>
+  </li>
+  <li>
+    <p>Blue</p>
+    <p>#0000FF</p>
+    <p>rgb(0, 0, 255)</p>
+  </li>
+  <li>
+    <p>BlueViolet</p>
+    <p>#8A2BE2</p>
+    <p>rgb(138, 43, 226 )</p>
+  </li>
+  <li>
+    <p>Brown</p>
+    <p>#A52A2A</p>
+    <p>rgb(165, 42, 42)</p>
+  </li>
+  <li>
+    <p>BurlyWood</p>
+    <p>#DEB887</p>
+    <p>rgb(222, 184, 135)</p>
+  </li>
+  <li>
+    <p>CadetBlue</p>
+    <p>#5F9EA0</p>
+    <p>rgb(95, 158, 160)</p>
+  </li>
+  <li>
+    <p>Chartreuse</p>
+    <p>#7FFF00</p>
+    <p>rgb(127, 255, 0)</p>
+  </li>
+  <li>
+    <p>Chocolate</p>
+    <p>#D2691E</p>
+    <p>rgb(210, 105, 30)</p>
+  </li>
+  <li>
+    <p>Coral</p>
+    <p>#FF7F50</p>
+    <p>rgb(255, 127, 80)</p>
+  </li>
+  <li>
+    <p>CornflowerBlue</p>
+    <p>#6495ED</p>
+    <p>rgb(100, 149, 237)</p>
+  </li>
+  <li>
+    <p>Cyan</p>
+    <p>#00FFFF</p>
+    <p>rgb(0,255,255)</p>
+  </li>
+  <li>
+    <p>DarkBlue</p>
+    <p>#00008B</p>
+    <p>rgb(0,0,139)</p>
+  </li>
+  <li>
+    <p>DarkCyan</p>
+    <p>#008B8B</p>
+    <p>rgb(	0,139,139)</p>
+  </li>
+  <li>
+    <p>DarkGoldenRod</p>
+    <p>#B8860B</p>
+    <p>rgb(184,134,11)</p>
+  </li>
+  <li>
+    <p>DarkGray</p>
+    <p>#A9A9A9</p>
+    <p>rgb(169,169,169)</p>
+  </li>
+  <li>
+    <p>DarkGrey</p>
+    <p>#A9A9A9</p>
+    <p>rgb(169,169,169)</p>
+  </li>
+  <li>
+    <p>DarkGreen</p>
+    <p>#006400</p>
+    <p>rgb(0,100,0)</p>
+  </li>
+  <li>
+    <p>DarkKhaki</p>
+    <p>#BDB76B</p>
+    <p>rgb(189,183,107)</p>
+  </li>
+  <li>
+    <p>DarkMagenta</p>
+    <p>#8B008B</p>
+    <p>rgb(139,0,139)</p>
+  </li>
+  <li>
+    <p>DarkOliveGreen</p>
+    <p>#556B2F</p>
+    <p>rgb(85,107,47)</p>
+  </li>
+  <li>
+    <p>DarkOrange</p>
+    <p>#FF8C00</p>
+    <p>rgb(255,140,0)</p>
+  </li>
+  <li>
+    <p>DarkOrchid</p>
+    <p>#9932CC</p>
+    <p>rgb(153,50,204)</p>
+  </li>
+  <li>
+    <p>DarkRed</p>
+    <p>#8B0000</p>
+    <p>rgb(139,0,0)</p>
+  </li>
+  <li>
+    <p>DarkSalmon</p>
+    <p>#E9967A</p>
+    <p>rgb(233,150,122)</p>
+  </li>
+  <li>
+    <p>DarkSeaGreen</p>
+    <p>#8FBC8F</p>
+    <p>rgb(143,188,143)</p>
+  </li>
+  <li>
+    <p>DarkSlateBlue</p>
+    <p>#483D8B</p>
+    <p>rgb(72,61,139)</p>
+  </li>
+  <li>
+    <p>DarkSlateGray</p>
+    <p>#2F4F4F</p>
+    <p>rgb(47,79,79)</p>
+  </li>
+  <li>
+    <p>DarkSlateGrey</p>
+    <p>#2F4F4F</p>
+    <p>rgb(47,79,79)</p>
+  </li>
+  <li>
+    <p>DarkTurquoise</p>
+    <p>#00CED1</p>
+    <p>rgb(0,206,209)</p>
+  </li>
+  <li>
+    <p>DarkViolet</p>
+    <p>#9400D3</p>
+    <p>rgb(	148,0,211)</p>
+  </li>
+  <li>
+    <p>DeepPink</p>
+    <p>#FF1493</p>
+    <p>rgb(255,20,147)</p>
+  </li>
+  <li>
+    <p>DeepSkyBlue</p>
+    <p>#00BFFF</p>
+    <p>rgb(0,191,255)</p>
+  </li>
+
+
+</ul>
+
 {% endblock %}
